stateful.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: bloodapp-statefulset
spec:
  serviceName: bloodapp-headless
  replicas: 1
  selector:
    matchLabels:
      app: bloodapp-db
  template:
    metadata:
      labels:
        app: bloodapp-db
    spec:
      containers:
        - name: bloodapp-db
          image: kommanatejaswini/bloodyapp:dbimage

          ports:
            - containerPort: 3306

          resources:
            requests:
              cpu: "100m"
              memory: 128Mi
            limits:
              cpu: "500m"
              memory: 256Mi

          volumeMounts:
            - name: mysql-persistant-storage
              mountPath: /usr/share/nginx/html

  volumeClaimTemplates:
    - metadata:
        name: mysql-persistant-storage
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
