app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: bloodapp-service
spec:
  type: ClusterIP
  selector:
    app: bloodapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
